# wali

./: .gitattributes  .gitignore  .luarc.example.json  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix
.github/workflows/: ci.yml  publish-crate.yml  release.yml
docs/: builtin-modules.md  cli.md  development-story.md  development.md  development_plan.md  implementation-companion.md  manifest.md  module-developers.md  module_contract.lua  philosophy.md  tiny_agentless_automation_design_doc.md
examples/: all-modules.lua  test.lua
examples/custom-mods/: test_module.lua
lua/: manifest.lua
lua/modules/: api.lua  wali.lua
scripts/: install.sh  release-smoke.sh
src/: lib.rs  main.rs  state_file.rs
src/cli/: context.rs  mod.rs
src/common/: base64.rs  error.rs  mod.rs
src/engine/: mod.rs  secrets.rs
src/executor/: backend.rs  command.rs  facts.rs  fs.rs  (+8 more)
tests/: builtin_file.rs  builtin_path_contract.rs  builtin_template.rs  builtin_tree.rs  cleanup.rs  cli.rs  codec_api.rs  command.rs  command_api.rs  command_builtin.rs  command_output.rs  command_timeout.rs  controller_api.rs  depends_on.rs  flow.rs  fs_primitives.rs  hash_api.rs  host_read_text.rs  json_api.rs  local_builtins.rs  manifest_validation.rs  module_requires.rs  module_result_contract.rs  module_source_git.rs  module_source_git_cache.rs  module_source_validation.rs  module_sources.rs  on_change.rs  parallelism.rs  path_api.rs  selection.rs  state_file.rs  transfer.rs  vars.rs  version_api.rs  when.rs
types/: manifest.d.lua  wali.d.lua
(+124 files in other folders)
