[package]
name = "wali"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "A tiny Rust automation engine for local and remote machines with builtin Lua for orchestration"
categories = ["command-line-utilities"]
keywords = ["automation-tool", "cli", "automation-framework", "task-runner"]
readme = "README.md"
repository = "https://github.com/milchinskiy/wali"
license = "MIT"

[dependencies]
console = "0.16.3"
glob = "0.3.3"
mlua = { version = "0.11.6", features = ["lua55", "vendored", "serde", "send"] }
rust-args-parser = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_ext_duration = "0.2.0"
serde_json = "1.0.149"
ssh2 = "0.9.5"
libssh2-sys = "0.3.1"
portable-pty = "0.9.0"
supports-unicode = "3.0.0"
indicatif = "0.18.4"
rand = "0.10.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }

[lints.clippy]
complexity = "warn"
perf = "deny"
style = "deny"
suspicious = "deny"

[lints.rust]
unsafe_code = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
debug = 0
incremental = false
